rstsr-kml-ffi/header/kblas.h

typedef BLASLONG BLASINT;
typedef int BLASINT;
typedef float _Complex blas_complex_float;
typedef double _Complex blas_complex_double;
typedef struct {
    float real, imag;
} blas_complex_float;
typedef struct {
    double real, imag;
} blas_complex_double;
/* Set the number of threads on runtime. */
void BlasSetNumThreads(int numThreads);
/* Set the number of local threads on runtime. */
void BlasSetNumThreadsLocal(int numThreadsLocal);
/* Get the number of threads on runtime. */
int BlasGetNumThreads(void);
/* Get the number of local threads on runtime. */
int BlasGetNumThreadsLocal(void);
/* Get the number of physical processors (cores). */
int BlasGetNumProcs(void);
/* Get  KML_BLAS parallelization type */
int BlasGetParallel(void);
/* matrix saved in rows or cols */
typedef enum CBLAS_ORDER {
    CblasRowMajor = 101,
    CblasColMajor = 102
} CBLAS_ORDER;
/* matrix transpose or conjugate transpose */
typedef enum CBLAS_TRANSPOSE {
    CblasNoTrans = 111,
    CblasTrans = 112,
    CblasConjTrans = 113, // conjugate transpose
    CblasConjNoTrans = 114
} CBLAS_TRANSPOSE;
typedef struct {
    char productName[VERSION_STRUCT_LEN];
    char productVersion[VERSION_STRUCT_LEN];
    char componentName[VERSION_STRUCT_LEN];
    char componentVersion[VERSION_STRUCT_LEN];
    char componentAppendInfo[VERSION_STRUCT_LEN];
    char softwareName[VERSION_STRUCT_LEN];
    char softwareVersion[VERSION_STRUCT_LEN];
} KBLASVersion;
int KBLASGetVersion(KBLASVersion *ver);
float cblas_sdsdot(const BLASINT n, const float alpha, const float *x, const BLASINT incX, const float *y,
    const BLASINT incY);
double cblas_dsdot(const BLASINT n, const float *x, const BLASINT incX, const float *y, const BLASINT incY);
float cblas_sdot(const BLASINT n, const float *x, const BLASINT incX, const float *y, const BLASINT incY);
double cblas_ddot(const BLASINT n, const double *x, const BLASINT incX, const double *y, const BLASINT incY);
blas_complex_float cblas_cdotu(const BLASINT n, const void *x, const BLASINT incX, const void *y, const BLASINT incY);
blas_complex_float cblas_cdotc(const BLASINT n, const void *x, const BLASINT incX, const void *y, const BLASINT incY);
blas_complex_double cblas_zdotu(const BLASINT n, const void *x, const BLASINT incX, const void *y, const BLASINT incY);
blas_complex_double cblas_zdotc(const BLASINT n, const void *x, const BLASINT incX, const void *y, const BLASINT incY);
void cblas_cdotu_sub(const BLASINT n, const void *x, const BLASINT incX, const void *y, const BLASINT incY, void *ret);
void cblas_cdotc_sub(const BLASINT n, const void *x, const BLASINT incX, const void *y, const BLASINT incY, void *ret);
void cblas_zdotu_sub(const BLASINT n, const void *x, const BLASINT incX, const void *y, const BLASINT incY, void *ret);
void cblas_zdotc_sub(const BLASINT n, const void *x, const BLASINT incX, const void *y, const BLASINT incY, void *ret);
float cblas_sasum(const BLASINT n, const float *x, const BLASINT incX);
double cblas_dasum(const BLASINT n, const double *x, const BLASINT incX);
float cblas_scasum(const BLASINT n, const void *x, const BLASINT incX);
double cblas_dzasum(const BLASINT n, const void *x, const BLASINT incX);
float cblas_snrm2(const BLASINT n, const float *x, const BLASINT incX);
double cblas_dnrm2(const BLASINT n, const double *x, const BLASINT incX);
float cblas_scnrm2(const BLASINT n, const void *x, const BLASINT incX);
double cblas_dznrm2(const BLASINT n, const void *x, const BLASINT incX);
CBLAS_INDEX cblas_isamax(const BLASINT n, const float *x, const BLASINT incX);
CBLAS_INDEX cblas_idamax(const BLASINT n, const double *x, const BLASINT incX);
CBLAS_INDEX cblas_icamax(const BLASINT n, const void *x, const BLASINT incX);
CBLAS_INDEX cblas_izamax(const BLASINT n, const void *x, const BLASINT incX);
CBLAS_INDEX cblas_isamin(const BLASINT n, const float *x, const BLASINT incX);
CBLAS_INDEX cblas_idamin(const BLASINT n, const double *x, const BLASINT incX);
CBLAS_INDEX cblas_icamin(const BLASINT n, const void *x, const BLASINT incX);
CBLAS_INDEX cblas_izamin(const BLASINT n, const void *x, const BLASINT incX);
void cblas_saxpy(const BLASINT n, const float alpha, const float *x, const BLASINT incX, float *y, const BLASINT incY);
void cblas_daxpy(const BLASINT n, const double alpha, const double *x, const BLASINT incX, double *y,
    const BLASINT incY);
void cblas_caxpy(const BLASINT n, const void *alpha, const void *x, const BLASINT incX, void *y, const BLASINT incY);
void cblas_zaxpy(const BLASINT n, const void *alpha, const void *x, const BLASINT incX, void *y, const BLASINT incY);
void cblas_caxpyc(const BLASINT n, const void *alpha, const void *x, const BLASINT incX, void *y, const BLASINT incY);
void cblas_zaxpyc(const BLASINT n, const void *alpha, const void *x, const BLASINT incX, void *y, const BLASINT incY);
void cblas_somatcopy(const enum CBLAS_ORDER cblasOrder, const enum CBLAS_TRANSPOSE cblasTrans, const BLASINT crows,
    const BLASINT ccols, const float calpha, const float *a, const BLASINT clda, float *b, const BLASINT cldb);
void cblas_domatcopy(const enum CBLAS_ORDER cblasOrder, const enum CBLAS_TRANSPOSE cblasTrans, const BLASINT crows,
    const BLASINT ccols, const double calpha, const double *a, const BLASINT clda, double *b, const BLASINT cldb);
void cblas_comatcopy(const enum CBLAS_ORDER cblasOrder, const enum CBLAS_TRANSPOSE cblasTrans, const BLASINT crows,
    const BLASINT ccols, const float *calpha, const float *a, const BLASINT clda, float *b, const BLASINT cldb);
void cblas_zomatcopy(const enum CBLAS_ORDER cblasOrder, const enum CBLAS_TRANSPOSE cblasTrans, const BLASINT crows,
    const BLASINT ccols, const double *calpha, const double *a, const BLASINT clda, double *b, const BLASINT cldb);
void cblas_simatcopy(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE trans, const BLASINT rows,
    const BLASINT cols, const float alpha, float *AB, const BLASINT lda, const BLASINT ldb);
void cblas_dimatcopy(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE trans, const BLASINT rows,
    const BLASINT cols, const double alpha, double *AB, const BLASINT lda, const BLASINT ldb);
void cblas_cimatcopy(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE trans, const BLASINT rows,
    const BLASINT cols, const float *alpha, float *AB, const BLASINT lda, const BLASINT ldb);
void cblas_zimatcopy(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE trans, const BLASINT rows,
    const BLASINT cols, const double *alpha, double *AB, const BLASINT lda, const BLASINT ldb);
void cblas_simatadd(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa, const BLASINT m,
    const BLASINT n, const float alpha, float *a, const BLASINT lda, float *bc, const BLASINT ldb);
void cblas_dimatadd(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa, const BLASINT m,
    const BLASINT n, const double alpha, double *a, const BLASINT lda, double *bc, const BLASINT ldb);
void cblas_cimatadd(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa, const BLASINT m,
    const BLASINT n, const float *alpha, float *a, const BLASINT lda, float *bc, const BLASINT ldb);
void cblas_zimatadd(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa, const BLASINT m,
    const BLASINT n, const double *alpha, double *a, const BLASINT lda, double *bc, const BLASINT ldb);
void cblas_somatadd(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa,
    const enum CBLAS_TRANSPOSE transb, const BLASINT m, const BLASINT n, const float alpha, float *a, const BLASINT lda,
    const float beta, float *b, const BLASINT ldb, float *c, const BLASINT ldc);
void cblas_domatadd(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa,
    const enum CBLAS_TRANSPOSE transb, const BLASINT m, const BLASINT n, const double alpha, double *a,
    const BLASINT lda, const double beta, double *b, const BLASINT ldb, double *c, const BLASINT ldc);
void cblas_comatadd(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa,
    const enum CBLAS_TRANSPOSE transb, const BLASINT m, const BLASINT n, const float *alpha, float *a,
    const BLASINT lda, const float *beta, float *b, const BLASINT ldb, float *c, const BLASINT ldc);
void cblas_zomatadd(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa,
    const enum CBLAS_TRANSPOSE transb, const BLASINT m, const BLASINT n, const double *alpha, double *a,
    const BLASINT lda, const double *beta, double *b, const BLASINT ldb, double *c, const BLASINT ldc);
void cblas_simatsub(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa, const BLASINT m,
    const BLASINT n, const float alpha, float *a, const BLASINT lda, float *bc, const BLASINT ldb);
void cblas_dimatsub(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa, const BLASINT m,
    const BLASINT n, const double alpha, double *a, const BLASINT lda, double *bc, const BLASINT ldb);
void cblas_cimatsub(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa, const BLASINT m,
    const BLASINT n, const float *alpha, float *a, const BLASINT lda, float *bc, const BLASINT ldb);
void cblas_zimatsub(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa, const BLASINT m,
    const BLASINT n, const double *alpha, double *a, const BLASINT lda, double *bc, const BLASINT ldb);
void cblas_somatsub(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa,
    const enum CBLAS_TRANSPOSE transb, const BLASINT m, const BLASINT n, const float alpha, float *a, const BLASINT lda,
    const float beta, float *b, const BLASINT ldb, float *c, const BLASINT ldc);
void cblas_domatsub(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa,
    const enum CBLAS_TRANSPOSE transb, const BLASINT m, const BLASINT n, const double alpha, double *a,
    const BLASINT lda, const double beta, double *b, const BLASINT ldb, double *c, const BLASINT ldc);
void cblas_comatsub(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa,
    const enum CBLAS_TRANSPOSE transb, const BLASINT m, const BLASINT n, const float *alpha, float *a,
    const BLASINT lda, const float *beta, float *b, const BLASINT ldb, float *c, const BLASINT ldc);
void cblas_zomatsub(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa,
    const enum CBLAS_TRANSPOSE transb, const BLASINT m, const BLASINT n, const double *alpha, double *a,
    const BLASINT lda, const double *beta, double *b, const BLASINT ldb, double *c, const BLASINT ldc);
void cblas_simatmul(const enum CBLAS_ORDER ordering, const enum CBLAS_TRANSPOSE transa, const BLASINT m,
    const BLASINT n, const float alpha, float *a, const BLASINT lda, float *bc, const BLASINT ldb);