rstsr-kml-ffi/src/kblas/ffi_extern.rs


unsafe extern "C" {
    pub fn BlasSetNumThreads(numThreads: c_int);
    pub fn BlasSetNumThreadsLocal(numThreadsLocal: c_int);
    pub fn BlasGetNumThreads() -> c_int;
    pub fn BlasGetNumThreadsLocal() -> c_int;
    pub fn BlasGetNumProcs() -> c_int;
    pub fn BlasGetParallel() -> c_int;
    pub fn KBLASGetVersion(ver: *mut KBLASVersion) -> c_int;
    pub fn cblas_sdsdot(
        n: blas_int,
        alpha: f32,
        x: *const f32,
        incX: blas_int,
        y: *const f32,
        incY: blas_int,
    ) -> f32;
    pub fn cblas_dsdot(
        n: blas_int,
        x: *const f32,
        incX: blas_int,
        y: *const f32,
        incY: blas_int,
    ) -> f64;
    pub fn cblas_sdot(
        n: blas_int,
        x: *const f32,
        incX: blas_int,
        y: *const f32,
        incY: blas_int,
    ) -> f32;
    pub fn cblas_ddot(
        n: blas_int,
        x: *const f64,
        incX: blas_int,
        y: *const f64,
        incY: blas_int,
    ) -> f64;
    pub fn cblas_cdotu(
        n: blas_int,
        x: *const c_void,
        incX: blas_int,
        y: *const c_void,
        incY: blas_int,
    ) -> blas_complex_float;
    pub fn cblas_cdotc(
        n: blas_int,
        x: *const c_void,
        incX: blas_int,
        y: *const c_void,
        incY: blas_int,
    ) -> blas_complex_float;
    pub fn cblas_zdotu(
        n: blas_int,
        x: *const c_void,
        incX: blas_int,
        y: *const c_void,
        incY: blas_int,
    ) -> blas_complex_double;
    pub fn cblas_zdotc(
        n: blas_int,
        x: *const c_void,
        incX: blas_int,
        y: *const c_void,
        incY: blas_int,
    ) -> blas_complex_double;
    pub fn cblas_cdotu_sub(
        n: blas_int,
        x: *const c_void,
        incX: blas_int,
        y: *const c_void,
        incY: blas_int,
        ret: *mut c_void,
    );
    pub fn cblas_cdotc_sub(
        n: blas_int,
        x: *const c_void,
        incX: blas_int,
        y: *const c_void,
        incY: blas_int,
        ret: *mut c_void,
    );
    pub fn cblas_zdotu_sub(
        n: blas_int,
        x: *const c_void,
        incX: blas_int,
        y: *const c_void,
        incY: blas_int,
        ret: *mut c_void,
    );
    pub fn cblas_zdotc_sub(
        n: blas_int,
        x: *const c_void,
        incX: blas_int,
        y: *const c_void,
        incY: blas_int,
        ret: *mut c_void,
    );
    pub fn cblas_sasum(n: blas_int, x: *const f32, incX: blas_int) -> f32;
    pub fn cblas_dasum(n: blas_int, x: *const f64, incX: blas_int) -> f64;
    pub fn cblas_scasum(n: blas_int, x: *const c_void, incX: blas_int) -> f32;
    pub fn cblas_dzasum(n: blas_int, x: *const c_void, incX: blas_int) -> f64;
    pub fn cblas_snrm2(n: blas_int, x: *const f32, incX: blas_int) -> f32;
    pub fn cblas_dnrm2(n: blas_int, x: *const f64, incX: blas_int) -> f64;
    pub fn cblas_scnrm2(n: blas_int, x: *const c_void, incX: blas_int) -> f32;
    pub fn cblas_dznrm2(n: blas_int, x: *const c_void, incX: blas_int) -> f64;
    pub fn cblas_isamax(n: blas_int, x: *const f32, incX: blas_int) -> usize;
    pub fn cblas_idamax(n: blas_int, x: *const f64, incX: blas_int) -> usize;
    pub fn cblas_icamax(n: blas_int, x: *const c_void, incX: blas_int) -> usize;
    pub fn cblas_izamax(n: blas_int, x: *const c_void, incX: blas_int) -> usize;
    pub fn cblas_isamin(n: blas_int, x: *const f32, incX: blas_int) -> usize;
    pub fn cblas_idamin(n: blas_int, x: *const f64, incX: blas_int) -> usize;
    pub fn cblas_icamin(n: blas_int, x: *const c_void, incX: blas_int) -> usize;
    pub fn cblas_izamin(n: blas_int, x: *const c_void, incX: blas_int) -> usize;
    pub fn cblas_saxpy(
        n: blas_int,
        alpha: f32,
        x: *const f32,
        incX: blas_int,
        y: *mut f32,
        incY: blas_int,
    );
    pub fn cblas_daxpy(
        n: blas_int,
        alpha: f64,
        x: *const f64,
        incX: blas_int,
        y: *mut f64,
        incY: blas_int,
    );
    pub fn cblas_caxpy(
        n: blas_int,
        alpha: *const c_void,
        x: *const c_void,
        incX: blas_int,
        y: *mut c_void,
        incY: blas_int,
    );
    pub fn cblas_zaxpy(
        n: blas_int,
        alpha: *const c_void,
        x: *const c_void,
        incX: blas_int,
        y: *mut c_void,
        incY: blas_int,
    );
    pub fn cblas_caxpyc(
        n: blas_int,
        alpha: *const c_void,
        x: *const c_void,
        incX: blas_int,
        y: *mut c_void,
        incY: blas_int,
    );
    pub fn cblas_zaxpyc(
        n: blas_int,
        alpha: *const c_void,
        x: *const c_void,
        incX: blas_int,
        y: *mut c_void,
        incY: blas_int,
    );
    pub fn cblas_somatcopy(
        cblasOrder: CBLAS_ORDER,
        cblasTrans: CBLAS_TRANSPOSE,
        crows: blas_int,
        ccols: blas_int,
        calpha: f32,
        a: *const f32,
        clda: blas_int,
        b: *mut f32,
        cldb: blas_int,
    );
    pub fn cblas_domatcopy(
        cblasOrder: CBLAS_ORDER,
        cblasTrans: CBLAS_TRANSPOSE,
        crows: blas_int,
        ccols: blas_int,
        calpha: f64,
        a: *const f64,
        clda: blas_int,
        b: *mut f64,
        cldb: blas_int,
    );
    pub fn cblas_comatcopy(
        cblasOrder: CBLAS_ORDER,
        cblasTrans: CBLAS_TRANSPOSE,
        crows: blas_int,
        ccols: blas_int,
        calpha: *const f32,
        a: *const f32,
        clda: blas_int,
        b: *mut f32,
        cldb: blas_int,
    );
    pub fn cblas_zomatcopy(
        cblasOrder: CBLAS_ORDER,
        cblasTrans: CBLAS_TRANSPOSE,
        crows: blas_int,
        ccols: blas_int,
        calpha: *const f64,
        a: *const f64,
        clda: blas_int,
        b: *mut f64,
        cldb: blas_int,
    );
    pub fn cblas_simatcopy(
        ordering: CBLAS_ORDER,
        trans: CBLAS_TRANSPOSE,
        rows: blas_int,
        cols: blas_int,
        alpha: f32,
        AB: *mut f32,
        lda: blas_int,
        ldb: blas_int,
    );
    pub fn cblas_dimatcopy(
        ordering: CBLAS_ORDER,
        trans: CBLAS_TRANSPOSE,
        rows: blas_int,
        cols: blas_int,
        alpha: f64,
        AB: *mut f64,
        lda: blas_int,
        ldb: blas_int,
    );
    pub fn cblas_cimatcopy(
        ordering: CBLAS_ORDER,
        trans: CBLAS_TRANSPOSE,
        rows: blas_int,
        cols: blas_int,
        alpha: *const f32,
        AB: *mut f32,
        lda: blas_int,
        ldb: blas_int,
    );
    pub fn cblas_zimatcopy(
        ordering: CBLAS_ORDER,
        trans: CBLAS_TRANSPOSE,
        rows: blas_int,
        cols: blas_int,
        alpha: *const f64,
        AB: *mut f64,
        lda: blas_int,
        ldb: blas_int,
    );
    pub fn cblas_simatadd(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: f32,
        a: *mut f32,
        lda: blas_int,
        bc: *mut f32,
        ldb: blas_int,
    );
    pub fn cblas_dimatadd(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: f64,
        a: *mut f64,
        lda: blas_int,
        bc: *mut f64,
        ldb: blas_int,
    );
    pub fn cblas_cimatadd(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: *const f32,
        a: *mut f32,
        lda: blas_int,
        bc: *mut f32,
        ldb: blas_int,
    );
    pub fn cblas_zimatadd(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: *const f64,
        a: *mut f64,
        lda: blas_int,
        bc: *mut f64,
        ldb: blas_int,
    );
    pub fn cblas_somatadd(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        transb: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: f32,
        a: *mut f32,
        lda: blas_int,
        beta: f32,
        b: *mut f32,
        ldb: blas_int,
        c: *mut f32,
        ldc: blas_int,
    );
    pub fn cblas_domatadd(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        transb: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: f64,
        a: *mut f64,
        lda: blas_int,
        beta: f64,
        b: *mut f64,
        ldb: blas_int,
        c: *mut f64,
        ldc: blas_int,
    );
    pub fn cblas_comatadd(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        transb: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: *const f32,
        a: *mut f32,
        lda: blas_int,
        beta: *const f32,
        b: *mut f32,
        ldb: blas_int,
        c: *mut f32,
        ldc: blas_int,
    );
    pub fn cblas_zomatadd(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        transb: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: *const f64,
        a: *mut f64,
        lda: blas_int,
        beta: *const f64,
        b: *mut f64,
        ldb: blas_int,
        c: *mut f64,
        ldc: blas_int,
    );
    pub fn cblas_simatsub(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: f32,
        a: *mut f32,
        lda: blas_int,
        bc: *mut f32,
        ldb: blas_int,
    );
    pub fn cblas_dimatsub(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: f64,
        a: *mut f64,
        lda: blas_int,
        bc: *mut f64,
        ldb: blas_int,
    );
    pub fn cblas_cimatsub(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: *const f32,
        a: *mut f32,
        lda: blas_int,
        bc: *mut f32,
        ldb: blas_int,
    );
    pub fn cblas_zimatsub(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: *const f64,
        a: *mut f64,
        lda: blas_int,
        bc: *mut f64,
        ldb: blas_int,
    );
    pub fn cblas_somatsub(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        transb: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: f32,
        a: *mut f32,
        lda: blas_int,
        beta: f32,
        b: *mut f32,
        ldb: blas_int,
        c: *mut f32,
        ldc: blas_int,
    );
    pub fn cblas_domatsub(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        transb: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: f64,
        a: *mut f64,
        lda: blas_int,
        beta: f64,
        b: *mut f64,
        ldb: blas_int,
        c: *mut f64,
        ldc: blas_int,
    );
    pub fn cblas_comatsub(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        transb: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: *const f32,
        a: *mut f32,
        lda: blas_int,
        beta: *const f32,
        b: *mut f32,
        ldb: blas_int,
        c: *mut f32,
        ldc: blas_int,
    );
    pub fn cblas_zomatsub(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        transb: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: *const f64,
        a: *mut f64,
        lda: blas_int,
        beta: *const f64,
        b: *mut f64,
        ldb: blas_int,
        c: *mut f64,
        ldc: blas_int,
    );
    pub fn cblas_simatmul(
        ordering: CBLAS_ORDER,
        transa: CBLAS_TRANSPOSE,
        m: blas_int,
        n: blas_int,
        alpha: f32,
        a: *mut f32,
        lda: blas_int,
        bc: *mut f32,
        ldb: blas_int,
    );
